--- a/precastr/controller/home/cell/HomeTextPostTableViewCell.xib
+++ b/precastr/controller/home/cell/HomeTextPostTableViewCell.xib
@@ -120,6 +120,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6xZ-3R-5QJ">
+                        <rect key="frame" x="0.0" y="590" width="382" height="0.0"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -132,6 +137,7 @@
                 <outlet property="postStatusDateView" destination="DRm-aE-LGs" id="alz-IX-ImM"/>
                 <outlet property="postTextLabel" destination="9ga-nV-ADV" id="aKO-oe-Xyp"/>
                 <outlet property="profileLabel" destination="vi0-ky-EEw" id="pK9-sv-uvp"/>
+                <outlet property="separator" destination="6xZ-3R-5QJ" id="yYI-qP-71v"/>
                 <outlet property="socialIconsView" destination="y4W-yS-wtT" id="teH-7Q-0VR"/>
                 <outlet property="sourceImageFacebook" destination="TOd-OX-rkV" id="uP1-nJ-j6h"/>
                 <outlet property="sourceImageTwitter" destination="qjX-r6-ZZ2" id="3sQ-L3-2Ob"/>
