--- a/precastr/controller/home/cell/ModeratorCastsTableViewCell.xib
+++ b/precastr/controller/home/cell/ModeratorCastsTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,14 +34,6 @@
                         <rect key="frame" x="10" y="10" width="40" height="40"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <label opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ve-Tv-UPh">
-                        <rect key="frame" x="15" y="54" width="350" height="63"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                        <string key="text">Lorem Ipsum is simply dummy text of the printing and since the typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</string>
-                        <fontDescription key="fontDescription" name="VisbyCF-Regular" family="Visby CF" pointSize="16"/>
-                        <color key="textColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1fy-pG-CRF">
                         <rect key="frame" x="321" y="20" width="45" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
@@ -55,6 +47,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OjP-Al-hiB">
+                        <rect key="frame" x="10" y="54" width="363" height="20"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <view hidden="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QJg-My-suh">
@@ -134,11 +131,11 @@
             <connections>
                 <outlet property="currentCountImageLbl" destination="agW-Wu-yzd" id="Ute-Ja-TnH"/>
                 <outlet property="dateLabel" destination="awu-zc-CvK" id="qGW-cR-OlM"/>
+                <outlet property="descriptionView" destination="OjP-Al-hiB" id="fJ9-vy-aiF"/>
                 <outlet property="imageCounterView" destination="QJg-My-suh" id="SK8-MU-NYO"/>
                 <outlet property="imageGalleryScrollView" destination="Jo5-f1-CIJ" id="dWo-cm-rjw"/>
                 <outlet property="pageControl" destination="Elz-ct-30F" id="vzu-El-abg"/>
                 <outlet property="postStatusViewCell" destination="END-ah-Ikz" id="kDQ-VW-ba9"/>
-                <outlet property="postTextLabel" destination="7ve-Tv-UPh" id="uxu-TQ-a65"/>
                 <outlet property="profileLabel" destination="dVL-hf-Eje" id="Dqb-rW-Gnr"/>
                 <outlet property="profilePicImageView" destination="nhQ-Gp-QQe" id="gR7-eA-9Rd"/>
                 <outlet property="socialIconsView" destination="1fy-pG-CRF" id="JM8-Ju-XR8"/>
@@ -148,7 +145,7 @@
                 <outlet property="totalCountImageLbl" destination="7Vw-PN-bMB" id="zts-Zl-Wp0"/>
                 <outlet property="usernameLabel" destination="XNE-gT-UDR" id="BeX-bW-fOt"/>
             </connections>
-            <point key="canvasLocation" x="107.2" y="35.082458770614693"/>
+            <point key="canvasLocation" x="107.2" y="34.632683658170919"/>
         </tableViewCell>
     </objects>
     <resources>
